src/style.css
* {
	-webkit-tap-highlight-color: transparent;
	margin: 0;
	padding: 0;
	border: 0;
	box-sizing: border-box;
	outline: none;
	font-family: Sen;
}

:root {
	--bg: rgb(34, 35, 39);
	--bg-alt: rgb(40, 42, 46);
	--bg-alt2: rgb(45, 48, 52);
	--bg-alt3: rgb(50, 54, 58);
	--text: rgb(240, 240, 240);
	--text-alt: rgb(200, 200, 200);
	--text-alt2: rgb(160, 160, 160);
	--radius: 25px;
	--close-shadow: 0 2px 6px rgba(0, 0, 0, 0.075), 0 8px 14px rgba(0, 0, 0, 0.1);
	--distant-shadow: 0 2px 6px rgba(0, 0, 0, 0.125), 0 12px 20px rgba(0, 0, 0, 0.175);
	--transition: color 0.25s, background-color 0.25s, border-color 0.25s, box-shadow 0.25s, transform 0.2s, opacity 0.25s;
	--sidebar-width: 440px;
}

body {
	display: flex;
	background-color: var(--bg);
}

span {
	pointer-events: none;
}

.button {
	padding: 10px 18px;
	cursor: pointer;
	font-size: 16px;
	font-weight: 700;
	color: var(--text-alt);
	background-color: var(--bg-alt2);
	box-shadow: var(--close-shadow);
	border-radius: var(--radius);
	transition: var(--transition);
}
.button .material-icons-round {
	margin-inline: -2px 8px;
	font-size: 17px;
	vertical-align: sub;
}
.button:focus,
.button:hover {
	color: var(--text);
	background-color: var(--bg-alt3);
	box-shadow: var(--distant-shadow);
}
.button:active {
	transform: scale(0.875);
}

.icon-button {
	cursor: pointer;
	color: var(--text-alt2);
	background-color: transparent;
	border-radius: var(--radius);
	transition: var(--transition);
}
.icon-button:focus,
.icon-button:hover {
	color: var(--text);
	background-color: var(--bg-alt);
}
.icon-button .material-icons-round {
	padding: 8px;
	font-size: 20px;
	vertical-align: initial;
}

.sortable-ghost {
	opacity: 0;
}
.sortable-drag {
	opacity: 1 !important;
}

.hidden {
	display: none;
}

#sidebar {
	height: 100vh;
	width: var(--sidebar-width);
	position: relative;
	z-index: 3;
	background-color: var(--bg-alt);
	box-shadow: var(--distant-shadow);
	transition: var(--transition);
}
#sidebar h1 {
	margin: 30px 45px 15px;
	display: block;
	font-size: 32px;
	font-weight: 800;
	color: var(--text);
}
#sidebar > .container {
	height: calc(100% - 180px);
	overflow-x: hidden;
	overflow-y: auto;
}
#sidebar #projects {
	width: var(--sidebar-width);
	padding: 5px 35px 10px;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
	overflow: hidden;
}
#sidebar #add-project {
	margin-bottom: 34px;
	position: fixed;
	bottom: 0;
	left: calc(var(--sidebar-width) / 2 - 77.5px);
}
#sidebar.open {
	transform: none;
	opacity: 1;
}

.project {
	height: 165px;
	width: 165px;
	margin: 10px;
	cursor: pointer;
	user-select: none;
}
.project * {
	transition: var(--transition);
}
.project .box {
	height: 100%;
	width: 100%;
	padding: 20px 26px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	border-radius: var(--radius);
}
.project:not(#project-form):hover .box {
	background-color: var(--bg-alt2);
	box-shadow: var(--close-shadow);
	transform: scale(1.05);
}
.project.selected .box {
	background-color: var(--bg-alt3) !important;
	box-shadow: var(--close-shadow);
}
.project:not(#project-form):active .box {
	transform: scale(0.925);
}
.project.sortable-chosen .box {
	background-color: var(--bg-alt2);
	box-shadow: var(--close-shadow);
	transform: scale(0.925);
}
.project .container {
	pointer-events: none;
}
.project .container .name {
	margin-bottom: 5px;
	overflow-wrap: anywhere;
	font-size: 24px;
	font-weight: 700;
	color: var(--text-alt);
}
.project:hover .container .name {
	color: var(--text);
}
.project .container .tasks {
	font-size: 16px;
	color: var(--text-alt2);
}
.project:hover .container .tasks {
	color: var(--text-alt);
}
.project .buttons {
	margin: -5px -10px;
	display: flex;
	justify-content: space-between;
	opacity: 0;
}
.project.selected .buttons,
.project:hover .buttons {
	opacity: 1;
}

#project-form {
	cursor: initial;
}
#project-form .box {
	background-color: var(--bg-alt2);
	box-shadow: var(--close-shadow);
}
#project-form form {
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}
#project-form form label {
	font-size: 18px;
	font-weight: 700;
	color: var(--text);
}
#project-form form input {
	width: calc(100% + 10px);
	margin: 5px -5px;
	padding: 10px 12px;
	font-size: 15px;
	color: var(--text-alt2);
	background-color: var(--bg-alt);
	border-radius: 10px;
}
#project-form form input:focus {
	color: var(--text);
}
#project-form .buttons {
	margin-block: 0;
	pointer-events: auto;
	justify-content: space-around;
	opacity: 1;
}

main {
	height: 100vh;
	width: 100%;
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	overflow-x: hidden;
}

#tasks {
	width: 90%;
	max-width: 800px;
	position: relative;
	z-index: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
	transition: transform 0.3s, opacity 0.3s;
}
#tasks.hidden {
	transform: translateY(-100%);
	opacity: 0;
	overflow: hidden;
}
#tasks header {
	width: calc(100% + 40px);
	padding: 30px 26px 26px;
	position: sticky;
	z-index: 2;
	top: 0;
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-wrap: wrap;
	background-color: var(--bg);
}
#tasks #add-task {
	transition: var(--transition);
}
#tasks #add-task.hidden {
	display: block;
	pointer-events: none;
	opacity: 0;
	transform: scale(0.875);
}
#tasks .project-name {
	font-size: 32px;
	font-weight: 800;
	color: var(--text);
}
#tasks #no-projects {
	display: flex;
	flex-direction: column;
	align-items: center;
}
#tasks #no-projects.hidden {
	display: none;
}
#tasks #no-projects > span,
#tasks #no-tasks {
	margin: 25vh 0 30px;
	font-size: 70px;
	font-weight: 800;
	text-align: center;
	color: var(--bg-alt3);
}
#tasks .date-group {
	margin-bottom: 16px;
	width: 100%;
}
#tasks .date-type {
	padding-inline: 10px;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
#tasks .date-type > span {
	cursor: pointer;
	font-size: 24px;
	font-weight: 700;
	pointer-events: auto;
	user-select: none;
	color: var(--text-alt);
	transition: var(--transition);
}
#tasks .date-type > span:hover {
	color: var(--text);
}
#tasks .date-group .tasks-list {
	display: none;
}
#tasks .date-group.expanded .tasks-list {
	display: block;
}
#tasks .date-group.expanded .date-type button.expand {
	transform: rotate(180deg);
}

.task {
	width: 100%;
	margin-block: 18px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
}
.task .header {
	width: 100%;
	padding: 8px 14px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: relative;
	z-index: 1;
	color: var(--text);
	background-color: var(--bg-alt2);
	border-radius: var(--radius);
	box-shadow: var(--close-shadow);
	transition: var(--transition);
}
.task:hover .header {
	background-color: var(--bg-alt3);
	box-shadow: var(--distant-shadow);
	transform: scale(1.0125);
}
.task.checked .header {
	background-color: transparent;
	box-shadow: none;
}
.task .container {
	display: flex;
	align-items: center;
}
.task .checkbox {
	margin-right: 8px;
	position: relative;
}
.task .checkbox span {
	transition: opacity 0.2s;
}
.task .checkbox .check {
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0;
}
.task.checked .uncheck {
	opacity: 0;
}
.task.checked .check {
	opacity: 1;
}
.task.checked .name {
	text-decoration: line-through;
	color: var(--text-alt2);
}
.task .buttons {
	display: flex;
}
.task .buttons > button {
	margin-left: 5px;
}
.task.expanded .expand {
	transform: rotate(180deg);
}
.task.checked .expand,
.task.checked .edit,
.task:not(.checked) .delete {
	display: none;
}
.task.expired .delete {
	display: block;
}
.task .info {
	width: 90%;
	margin-bottom: -4px;
	padding: 25px 22px 0;
	position: relative;
	z-index: 0;
	color: var(--text);
	background: var(--bg-alt);
	border-radius: 0 0 var(--radius) var(--radius);
	transform: translateY(-8px);
	box-shadow: var(--close-shadow);
	transition: var(--transition);
}
.task.checked .info,
.task:not(.expanded) .info {
	display: none;
}
.task:hover .info {
	box-shadow: var(--distant-shadow);
	transform: scale(1.0125) translateY(-4px);
}
.task .info .description {
	min-width: 100%;
	margin-bottom: 18px;
	line-height: 20px;
	font-size: 15px;
	overflow-wrap: anywhere;
	color: var(--text-alt);
}
.task .info .date {
	margin-bottom: 18px;
	font-weight: 700;
	text-align: right;
}
.task .info .date .material-icons-round {
	margin-left: 10px;
	font-size: 17px;
	vertical-align: sub;
	color: var(--text-alt);
}
.task.sortable-chosen .header {
	transform: scale(0.985);
}
.task.sortable-chosen .info {
	transform: scale(0.985) translateY(-8px);
}

#task-form {
	max-width: 600px;
	position: fixed;
	z-index: 0;
	top: 100vh;
	opacity: 0;
	transition: top 0.4s, opacity 0.4s;
}
#task-form.visible {
	top: 0;
	opacity: 1;
}
#task-form h1 {
	padding: 30px 6px 28px;
	font-size: 32px;
	font-weight: 800;
	color: var(--text);
}
#task-form form {
	width: 100%;
	padding: 20px 32px;
	display: flex;
	flex-direction: column;
	align-items: center;
	color: var(--text);
	border-radius: var(--radius);
	background-color: var(--bg-alt);
	box-shadow: var(--close-shadow);
}
#task-form form > div {
	width: 100%;
}
#task-form .form-group {
	padding-block: 12px;
	display: flex;
	flex-direction: column;
}
#task-form .form-group input,
#task-form .form-group textarea {
	width: 100%;
	margin-top: 10px;
	padding: 10px 12px;
	font-size: 15px;
	resize: none;
	color: var(--text-alt2);
	background-color: var(--bg-alt2);
	border-radius: 10px;
	transition: var(--transition);
}
#task-form label {
	font-size: 17px;
	font-weight: 700;
	color: var(--text-alt);
}
#task-form input:focus,
#task-form textarea:focus {
	background-color: var(--bg-alt3);
	color: var(--text);
}
#description {
	height: 74px;
}
#task-form #date {
	width: 170px;
	margin-right: 5px;
}
#task-form .container {
	display: flex;
	justify-content: space-between;
	align-items: flex-end;
}
#task-form .buttons {
	margin-bottom: 12px;
	display: flex;
	justify-content: flex-end;
	flex-wrap: wrap;
	text-align: right;
}
#task-form .buttons > button {
	height: min-content;
	margin-inline: 2px;
}
#task-form .buttons > button:first-child {
	background-color: transparent;
	box-shadow: none;
}

#bottom-bar {
	position: fixed;
	z-index: 3;
	bottom: 34px;
	display: flex;
	justify-content: space-between;
	pointer-events: none;
}
#bottom-bar .button {
	height: 40px;
	width: 40px;
	padding: 0;
}
#bottom-bar .button > * {
	padding: 8px;
}

#open-projects {
	opacity: 0;
}
#open-projects .material-icons-round {
	margin: 0;
	font-size: 20px;
	vertical-align: initial;
}

#github {
	pointer-events: auto;
}
#github img {
	height: 40px;
	vertical-align: middle;
	filter: invert(.8);
	transition: filter 0.25s;
}
#github:hover img {
	filter: invert(1);
}

@media screen and (max-width: 1500px) {
	#tasks {
		margin-bottom: 64px;
	}
}
@media screen and (max-width: 1100px) {
	:root {
		--sidebar-width: 255px;
	}
}
@media screen and (max-width: 650px) {
	:root {
		--sidebar-width: 100vw;
	}
	#sidebar {
		position: fixed;
		transform: translateX(-100%);
		opacity: 0;
	}
	#sidebar,
	#sidebar > .container {
		width: 100%;
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
		align-items: center;
	}
	#sidebar h1 {
		width: 90%;
		padding-inline: 5px;
	}
	#sidebar #projects {
		width: 555px;
		max-width: calc(90% + 20px);
		padding-inline: 0;
	}
	#open-projects {
		pointer-events: auto;
		opacity: 1;
	}
}
@media screen and (max-width: 600px){
	#sidebar #projects {
		width: 370px;
	}
}
@media screen and (max-width: 388px){
	#sidebar #projects {
		width: 200px;
	}
}

